--- a/src/component/KnobEdit.css
+++ b/src/component/KnobEdit.css
@@ -8,13 +8,31 @@
 	overflow: hidden;
 }
 
+.knobEdit .lbl {
+	position: absolute;
+	top: 2%;
+	left: 2%;
+	font-size: 0.8em;
+	text-transform: uppercase;
+}
+
 .knobEdit label {
 	display: block;
     float: none;
     clear: both;
-	padding: 1% 8%;
+	padding: 4% 8%;
 }
 
 .knobEdit label input {
     float: right;
+	width: 50%;
+}
+
+.knobEdit .brd {
+	position: absolute;
+	width: 72%;
+	height: 72%;
+	bottom: 5%;
+	left: 8%;
+	padding: 2% 2%;
 }
