--- a/src/component/PadEdit.css
+++ b/src/component/PadEdit.css
@@ -18,13 +18,25 @@
 
 .padEdit label {
 	display: block;
-    float: none;
-    clear: both;
-	padding: 4% 8%;
+	float: none;
+	clear: both;
+ 	padding: 4% 8%;
 }
 
 .padEdit label input {
     float: right;
+	width: 50%;
+}
+
+.padEdit label .cln {
+	float: none;
+	clear: both;
+}
+
+.padEdit label select {
+    float: right;
+	width: 55%;
+	margin: 0% 0% 6% 0%;
 }
 
 .padEdit .brd {
