--- a/src/component/PadEdit.css
+++ b/src/component/PadEdit.css
@@ -16,29 +16,6 @@
 	text-transform: uppercase;
 }
 
-.padEdit label {
-	display: block;
-	float: none;
-	clear: both;
- 	padding: 4% 8%;
-}
-
-.padEdit label input {
-    float: right;
-	width: 50%;
-}
-
-.padEdit label .cln {
-	float: none;
-	clear: both;
-}
-
-.padEdit label select {
-    float: right;
-	width: 55%;
-	margin: 0% 0% 6% 0%;
-}
-
 .padEdit .brd {
 	position: absolute;
 	width: 72%;
@@ -51,4 +28,27 @@
 	border-radius: 5%;
 	padding: 2% 2%;
 	box-shadow: 0 0.2em 0.1em 0.05em rgba(255, 255, 255, 0.1) inset, 0 -0.2em 0.1em 0.05em rgba(0, 0, 0, 0.5) inset, 0 0.5em 0.65em 0 rgba(0, 0, 0, 0.3);
+}
+
+.padEdit .brd select {
+	width: 84%;
+	margin: 0% 8%;
+}
+
+.padEdit .brd label {
+	display: block;
+	float: none;
+	clear: both;
+ 	padding: 0% 8% 4% 8%;
+}
+
+.padEdit .brd label input {
+	float: right;
+	width: 40%;
+}
+
+.padEdit .brd label select {
+	float: right;
+	width: 40%;
+	margin: 0%;
 }
