--- a/src/component/PadEdit.css
+++ b/src/component/PadEdit.css
@@ -30,11 +30,6 @@
 	box-shadow: 0 0.2em 0.1em 0.05em rgba(255, 255, 255, 0.1) inset, 0 -0.2em 0.1em 0.05em rgba(0, 0, 0, 0.5) inset, 0 0.5em 0.65em 0 rgba(0, 0, 0, 0.3);
 }
 
-.padEdit .brd select {
-	width: 84%;
-	margin: 0% 8%;
-}
-
 .padEdit .brd label {
 	display: block;
 	float: none;
@@ -50,5 +45,9 @@
 .padEdit .brd label select {
 	float: right;
 	width: 40%;
-	margin: 0%;
+}
+
+.padEdit .brd label.full select {
+	float: none;
+	width: 100%;
 }
