--- a/src/component/PadEdit.css
+++ b/src/component/PadEdit.css
@@ -1,50 +1,60 @@
 .padEdit {
  	position: relative;
-	width: 200px;
-	height: 200px;
+	width: 12em;
+	height: 12em;
 	background: #181818;
 	color: #fff;
-	font-size: 16px;
+	font-size: 1em;
 	overflow: hidden;
-}
-
-.padEdit .lbl {
-	position: absolute;
-	top: 2%;
-	left: 2%;
-	font-size: 0.8em;
-	text-transform: uppercase;
 }
 
 .padEdit .brd {
 	position: absolute;
-	width: 72%;
-	height: 72%;
-	bottom: 5%;
-	left: 8%;
+	width: 8.86em;
+	height: 8.86em;
+	bottom: 0.36em;
+	left: 0.96em;
 	border-style: solid;
 	border-width: 0.5em;
-	border-color: #a22;
-	border-radius: 5%;
-	padding: 2% 2%;
+	border-color: #b22;
+	border-radius: 0.6em;
+	padding: 0.24em 0.24em;
 	box-shadow: 0 0.2em 0.1em 0.05em rgba(255, 255, 255, 0.1) inset, 0 -0.2em 0.1em 0.05em rgba(0, 0, 0, 0.5) inset, 0 0.5em 0.65em 0 rgba(0, 0, 0, 0.3);
+}
+
+.padEdit .lbl {
+	position: absolute;
+	top: 0.24em;
+	left: 0.24em;
+	font-size: 0.7em;
+	text-transform: uppercase;
 }
 
 .padEdit .brd label {
 	display: block;
 	float: none;
 	clear: both;
- 	padding: 0% 8% 4% 8%;
+ 	padding: 0em 0.96em 0.48em 0.96em;
 }
 
-.padEdit .brd label input {
+.padEdit .brd label input,select {
 	float: right;
-	width: 40%;
+	width: 55%;
+	font-size: 0.8em;
+	border-width: 0.06em;
+	padding: 0.06em;
+}
+
+.padEdit .brd label select, option {
+	padding: 0em;
+	/* To gain control over the appearance on WebKit */
+	/* -webkit-appearance : none; */
+	/* To gain control over the appearance on Gecko */
+	/* -moz-appearance : none; */
 }
 
 .padEdit .brd label select {
-	float: right;
-	width: 40%;
+	border-radius: 0.3em;
 }
 
 .padEdit .brd label.full select {
