--- a/src/component/KeybedEdit.css
+++ b/src/component/KeybedEdit.css
@@ -1,16 +1,16 @@
 .KeybedEdit {
-    font-size: 16px;
+    font-size: 1em;
     text-align: center;
+    padding: 0.6em 0 0 0;
 }
 
 .KeybedEdit .keybed {
     margin-bottom: 0.3em;
-    font-size: 1em;
+    font-size: 0.835em;
 }
 
 .KeybedEdit .transpose,.octave {
     display: inline-block;
-    text-transform: uppercase;
 }
 
 .KeybedEdit .octave {
