--- a/src/component/PadEdit.css
+++ b/src/component/PadEdit.css
@@ -19,7 +19,10 @@
 	border-color: #b22;
 	border-radius: 0.6em;
 	padding: 0.24em 0.24em;
-	box-shadow: 0 0.2em 0.1em 0.05em rgba(255, 255, 255, 0.1) inset, 0 -0.2em 0.1em 0.05em rgba(0, 0, 0, 0.5) inset, 0 0.5em 0.65em 0 rgba(0, 0, 0, 0.3);
+	box-shadow:
+		0 0.2em 0.1em 0.05em rgba(255, 255, 255, 0.1) inset, 
+		0 -0.2em 0.1em 0.05em rgba(0, 0, 0, 0.5) inset,
+		0 0.5em 0.65em 0 rgba(0, 0, 0, 0.3);
 }
 
 .padEdit .lbl {
