--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
 	font-size: 12px;
-	width: 101em;
+	width: 112em;
 	padding: 0;
 	margin: 0 auto;
 }
@@ -19,12 +19,17 @@
 	text-transform: uppercase;
 }
 
-.App > .left {
+.App > .col1 {
 	float: left;
+	width: 10.4em;
+}
+
+.App > .col2 {
+	float: right;
 	width: 50.4em;
 }
 
-.App > .right {
-	float: right;
+.App > .col3 {
+	float: left;
 	width: 50.4em;
 }
